--- a/application/flask_arduino/templates_arduino/layout_arduino.html
+++ b/application/flask_arduino/templates_arduino/layout_arduino.html
@@ -20,41 +20,46 @@
 
 <body>
   <div class="wrapper">
-    <div class="container-fluid">
-      <!-- ナビゲーションバー -->
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-        <a class="navbar-brand" href="{{url_for('arduino.index_view')}}">Flask Arduino</a>
-        <div class="collapse navbar-collapse justify-content-end">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="https://github.com/kouki-0926" target="_blank">
-                <img src="static_arduino/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
-                <a class="dropdown-item" href="{{ url_for('arduino.index_view')}}">index</a>
-                <a class="dropdown-item" href="{{url_for('arduino.measure_temp_view')}}">temp</a>
-                <a class="dropdown-item" href="{{url_for('arduino.blink_view')}}">blink</a>
-                <a class="dropdown-item" href="{{url_for('arduino.RGB_view')}}">RGB</a>
-              </div>
-            </li>
-          </ul>
+    <!-- ナビゲーションバー -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="navbar-brand" href="{{url_for('arduino.index_view')}}">Flask Arduino</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/kouki-0926" target="_blank">
+            <img src="static_arduino/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
+          </a>
+        </li>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
+              <a class="dropdown-item" href="{{ url_for('arduino.index_view')}}">index</a>
+              <a class="dropdown-item" href="{{url_for('arduino.measure_temp_view')}}">temp</a>
+              <a class="dropdown-item" href="{{url_for('arduino.blink_view')}}">blink</a>
+              <a class="dropdown-item" href="{{url_for('arduino.RGB_view')}}">RGB</a>
+            </div>
+          </li>
         </div>
-      </nav>
+      </ul>
+    </nav>
 
-      <!-- flash -->
-      {% for message in get_flashed_messages() %}
-      <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        {{message}}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      {% endfor %}
-      <!--本文 -->
+    <!-- flash -->
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {{message}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endfor %}
+
+    <!--本文 -->
+    <div class="container-fluid">
       <div class="main_text">
         {% block BODY %}
 
@@ -64,14 +69,15 @@
 
     <!-- フッター -->
     <footer class="footer">
-      <div class="center">
-        <a class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage　</small></a>
-        <a class="heading" href="{{ url_for('arduino.index_view')}}"><small>index　</small></a>
-        <a class="heading" href="{{url_for('arduino.measure_temp_view')}}"><small>temp　</small></a>
-        <a class="heading" href="{{url_for('arduino.blink_view')}}"><small>blink　</small></a>
-        <a class="heading" href="{{url_for('arduino.RGB_view')}}"><small>RGB　</small></a>
-      </div>
-    
+      <ul class="footer_ul">
+        <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('arduino.index_view')}}"><small>index</small></a>
+        <a style="display: block;" class="heading"
+          href="{{url_for('arduino.measure_temp_view')}}"><small>temp</small></a>
+        <a style="display: block;" class="heading" href="{{url_for('arduino.blink_view')}}"><small>blink</small></a>
+        <a style="display: block;" class="heading" href="{{url_for('arduino.RGB_view')}}"><small>RGB</small></a>
+      </ul>
+
       <div class="center">
         <small>&copy; 2020-<span id="thisYear"></span> Koki</small>
         <script type="text/javascript">
