--- a/application/flask_CPU/templates_cpu/layout_cpu.html
+++ b/application/flask_CPU/templates_cpu/layout_cpu.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=1024">
+  <link rel="icon" type="image/x-icon" href="static_cpu/images/cpu.png">
+  <link rel="apple-touch-icon" href="static_cpu/images/cpu.png">
   <title>Flask_CPU</title>
   <!-- bootstrapのインポート -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
