--- a/application/flask_CPU/templates_cpu/ip_address.html
+++ b/application/flask_CPU/templates_cpu/ip_address.html
@@ -27,6 +27,7 @@
 <h5>現在地</h5>
 {{Data[3]}},{{Data[5]}}
 <p>緯度{{Data[13]}}度　経度{{Data[14]}}度</p>
+<br>
 
 <div class="split">
   <iframe src="https://maps.google.co.jp/maps?output=embed&q={{Data[13]}},{{Data[14]}}" width="100%" height="500"></iframe>
@@ -52,7 +53,7 @@
 
 
 {% block FOOTER %}
-<ul class="footer_ul_2">
+<ul class="footer_ul_ip">
   <a style="display: block;" class="heading" href="http://map.simpleapi.net/" target="_blank" >
     <small>Supported By SimpleAPI「最寄り駅Webサービス」</small>
   </a>
