--- a/application/flask_CPU/templates_cpu/ip_address.html
+++ b/application/flask_CPU/templates_cpu/ip_address.html
@@ -53,16 +53,18 @@
 
 
 {% block FOOTER %}
-<ul class="footer_ul_ip">
-  <a style="display: block;" class="heading" href="http://map.simpleapi.net/" target="_blank" >
-    <small>Supported By SimpleAPI「最寄り駅Webサービス」</small>
-  </a>
-  <a style="display: block;" class="heading" href="https://www.ipify.org/" target="_blank" >
-    <small>Supported By ipify API</small>
-  </a>
-  <a style="display: block;" class="heading" href="https://ipapi.co/" target="_blank">
-    <small>Supported By ipapi</small>
-  </a>
-</ul>
+<div class="center">
+  <ul class="footer_ul_ip">
+    <a style="display: block;" class="heading" href="http://map.simpleapi.net/" target="_blank">
+      <small>Supported By SimpleAPI「最寄り駅Webサービス」</small>
+    </a>
+    <a style="display: block;" class="heading" href="https://www.ipify.org/" target="_blank">
+      <small>Supported By ipify API</small>
+    </a>
+    <a style="display: block;" class="heading" href="https://ipapi.co/" target="_blank">
+      <small>Supported By ipapi</small>
+    </a>
+  </ul>
+</div>
 <hr>
 {% endblock %}
