--- a/application/flask_arduino/templates_arduino/layout_arduino.html
+++ b/application/flask_arduino/templates_arduino/layout_arduino.html
@@ -41,7 +41,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('arduino.index_view')}}">index</a>
-              <a class="dropdown-item" href="{{url_for('arduino.measure_temp_view')}}">temp</a>
+              <a class="dropdown-item" href="{{url_for('arduino.measure_temp_view',graph_type='temp')}}">temp</a>
               <a class="dropdown-item" href="{{url_for('arduino.blink_view')}}">blink</a>
               <a class="dropdown-item" href="{{url_for('arduino.RGB_view')}}">RGB</a>
             </div>
@@ -74,8 +74,7 @@
       <ul class="footer_ul">
         <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('arduino.index_view')}}"><small>index</small></a>
-        <a style="display: block;" class="heading"
-          href="{{url_for('arduino.measure_temp_view')}}"><small>temp</small></a>
+        <a style="display: block;" class="heading" href="{{url_for('arduino.measure_temp_view',graph_type='temp')}}"><small>temp</small></a>
         <a style="display: block;" class="heading" href="{{url_for('arduino.blink_view')}}"><small>blink</small></a>
         <a style="display: block;" class="heading" href="{{url_for('arduino.RGB_view')}}"><small>RGB</small></a>
       </ul>
