--- a/application/flask_CPU/templates_cpu/measure.html
+++ b/application/flask_CPU/templates_cpu/measure.html
@@ -10,10 +10,12 @@
 {% endblock %}
 
 {% block BODY %}
-<h3>{{Data[0]}}</h3>
-<h3>{{Data[1]}}</h3>
-<h3>{{Data[2]}}</h3>
-<h3>{{Data[3]}}　{{Data[4]}}　{{Data[5]}}</h3>
+<div class="center">
+  <h3>{{Data[0]}}</h3>
+  <h3>{{Data[1]}}</h3>
+  <h3>{{Data[2]}}</h3>
+  <h3>{{Data[3]}}　{{Data[4]}}　{{Data[5]}}</h3>
+</div>
 
 <div class="form-check form-check-inline">
   {% if graph_type=="temp" %}
