--- a/application/flask_arduino/templates_arduino/index_arduino.html
+++ b/application/flask_arduino/templates_arduino/index_arduino.html
@@ -6,8 +6,7 @@
   <a class="list-group-item list-group-item-action" href="{{url_for('arduino.measure_temp_view',graph_type='temp')}}">temp</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('arduino.blink_view')}}">blink</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('arduino.RGB_view')}}">RGB</a>
-</div>
-<br><br>
+</div><br><br>
 
 <nav aria-label="Page navigation">
   <ul class="pagination justify-content-center">
