--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -41,6 +41,18 @@
     </div>
   </div>
 
+  <div class="card text-center border-success">
+    <div class="card-header">
+      <b><a href='{{url_for("game.index_view")}}' class="heading">Flask Game</a></b>
+    </div>
+    <a href='{{url_for("game.index_view")}}'>
+      <img src="static_main/images/game.png" alt="Game" width="150" height="100">
+    </a>
+    <div class="card-body text-success">
+      <p class="card-text">Flask Game is in development</p>
+    </div>
+  </div>
+
 </div>
 
 {% endblock %}
