--- a/application/flask_game/templates_game/layout_game.html
+++ b/application/flask_game/templates_game/layout_game.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="static_main/images/RaspberryPi.png">
-  <link rel="apple-touch-icon" href="static_main/images/RaspberryPi.png">
-  <title>Flask RaspberryPi</title>
+  <link rel="icon" type="image/x-icon" href="static_game/images/game.png">
+  <link rel="apple-touch-icon" href="static_game/images/game.png">
+  <title>Flask Game</title>
   <!-- bootstrapのインポート -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -14,10 +14,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
   <!-- スタイルシート -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/mplus1p.css">
-  <link rel=stylesheet href="static_main/css/style.css">
+  <link rel=stylesheet href="static_game/css/style.css">
   {% block SCRIPT %}
 
-  {% endblock%}
+  {% endblock %}
 </head>
 
 <body>
@@ -26,24 +26,22 @@
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="navbar-brand" href="{{url_for('main.index_view')}}">Flask RaspberryPi</a>
+          <a class="navbar-brand" href="{{url_for('game.index_view')}}">Flask game<a>
         </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/kouki-0926" target="_blank">
-            <img src="static_main/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
+            <img src="static_game/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
           </a>
         </li>
         <div class="collapse navbar-collapse" id="navbarNav">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" baria-haspopup="true" aria-expanded="false">MENU</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">MENU</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
-              <a class="dropdown-item" href="{{ url_for('Math.index_view')}}">Flask math</a>
-              <a class="dropdown-item" href="{{ url_for('cpu.index_view')}}">Flask CPU</a>
-              <a class="dropdown-item" href="{{ url_for('arduino.index_view')}}">Flask Arduino</a>
-              <a class="dropdown-item" href="{{ url_for('game.index_view')}}">Flask Game</a>
+              <a class="dropdown-item" href="{{ url_for('game.index_view')}}">index</a>
             </div>
           </li>
         </div>
@@ -62,10 +60,10 @@
 
     <!--本文 -->
     <div class="container-fluid">
-      <div class="blog-body">
-        {% block body %}
+      <div class="main_text">
+        {% block BODY %}
 
-        {% endblock%}
+        {% endblock %}
       </div>
     </div>
 
@@ -73,10 +71,7 @@
     <footer class="footer">
       <ul class="footer_ul">
         <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage</small></a>
-        <a style="display: block;" class="heading" href="{{ url_for('Math.index_view')}}"><small>FlaskMath</small></a>
-        <a style="display: block;" class="heading" href="{{ url_for('cpu.index_view')}}"><small>FlaskCPU</small></a>
-        <a style="display: block;" class="heading" href="{{ url_for('arduino.index_view')}}"><small>FlaskArduino</small></a>
-        <a style="display: block;" class="heading" href="{{ url_for('game.index_view')}}"><small>FlaskGame</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('game.index_view')}}"><small>index</small></a>
       </ul>
 
       <div class="center">
@@ -86,8 +81,8 @@
           thisYear = date.getFullYear();
           document.getElementById("thisYear").innerHTML = thisYear;
         </script>
-        <a class="heading" href="https://github.com/kouki-0926/FlaskMathOnHeroku" target="_blank">
-          <img src="static_main/images/GitHub-Mark-64px.png" width="25" height="25" alt="GitHub">
+        <a class="heading" href="https://github.com/kouki-0926" target="_blank">
+          <img src="static_game/images/GitHub-Mark-64px.png" width="25" height="25" alt="GitHub">
         </a>
       </div>
     </footer>
