--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -11,7 +11,8 @@
       <img src="static_main/images/tenkey.png" alt="CPU" width="150" height="100">
     </a>
     <div class="card-body text-success">
-      <p class="card-text">Flask Math is a web site that can perform various calculations such as calculus and matrix.</p>
+      <p class="card-text">Flask Math is a web site that can perform various calculations such as calculus and matrix.
+      </p>
     </div>
   </div>
 
@@ -49,7 +50,7 @@
       <img src="static_main/images/game.png" alt="Game" width="150" height="100">
     </a>
     <div class="card-body text-success">
-      <p class="card-text">Flask Game is in development</p>
+      <h2 class="card-text" style="color:yellow;background-color: black;">Flask Game is in development</h2>
     </div>
   </div>
 
