--- a/application/flask_game/templates_game/index_game.html
+++ b/application/flask_game/templates_game/index_game.html
@@ -3,7 +3,7 @@
 {% block BODY %}
 <br><br>
 <div class="list-group">
-  <a class="list-group-item list-group-item-action" href="{{url_for('game.index_view')}}">index</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('game.jyanken_view')}}">じゃんけん</a>
 </div><br><br>
 
 <nav aria-label="Page navigation">
