--- a/application/flask_game/templates_game/layout_game.html
+++ b/application/flask_game/templates_game/layout_game.html
@@ -42,6 +42,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('game.index_view')}}">index</a>
+              <a class="dropdown-item" href="{{ url_for('game.jyanken_view')}}">じゃんけん</a>
             </div>
           </li>
         </div>
@@ -72,6 +73,7 @@
       <ul class="footer_ul">
         <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('game.index_view')}}"><small>index</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('game.jyanken_view')}}"><small>じゃんけん</small></a>
       </ul>
 
       <div class="center">
