--- a/application/flask_game/templates_game/jyanken.html
+++ b/application/flask_game/templates_game/jyanken.html
@@ -4,14 +4,31 @@
 <h2><a href="{{url_for('game.jyanken_view')}}" class="heading">じゃんけん</a></h2>
 <br>
 
-<form action='{{url_for("game.jyanken_view")}}' method="post" enctype="multipart/form-data">
-    <div class="center">
-        <button type="button" class="btn btn-secondary">グー</button>
-        <button type="button" class="btn btn-secondary">チョキ</button>
-        <button type="button" class="btn btn-secondary">パー</button>
-    </div>
-</form><br>
+<div class="center">
+    <form action='{{url_for("game.jyanken_view")}}' method="post" enctype="multipart/form-data">
+        <div class="radioArea" id="makeImg">
+            {% if n==1 %}
+            <input type="radio" name="n" id="r1" value="1" checked><label for="r1">グー</label>
+            {% else %}
+            <input type="radio" name="n" id="r1" value="1"><label for="r1">グー</label>
+            {% endif %}
 
-{{anser}}
+            {% if n==2 %}
+            <input type="radio" name="n" id="r2" value="2" checked><label for="r2">チョキ</label>
+            {% else %}
+            <input type="radio" name="n" id="r2" value="2"><label for="r2">チョキ</label>
+            {% endif %}
+
+            {% if n==3 %}
+            <input type="radio" name="n" id="r3" value="3" checked><label for="r3">パー</label>
+            {% else %}
+            <input type="radio" name="n" id="r3" value="3"><label for="r3">パー</label>
+            {% endif %}
+        </div><br>
+        <button type="submit" class="btn btn-primary btn-block">確定</button>
+    </form><br><br>
+
+    <h4>{% for anser in Anser%}{{anser}}{% endfor %}</h4>
+</div>
 
 {% endblock %}
