--- a/application/flask_game/templates_game/index_game.html
+++ b/application/flask_game/templates_game/index_game.html
@@ -4,6 +4,7 @@
 <br><br>
 <div class="list-group">
   <a class="list-group-item list-group-item-action" href="{{url_for('game.jyanken_view')}}">じゃんけん</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('game.box_view')}}">箱</a>
 </div><br><br>
 
 <nav aria-label="Page navigation">
