--- a/application/flask_game/templates_game/layout_game.html
+++ b/application/flask_game/templates_game/layout_game.html
@@ -42,7 +42,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('game.index_view')}}">index</a>
-              <a class="dropdown-item" href="{{ url_for('game.jyanken_view')}}">じゃんけん</a>
+              <a class="dropdown-item" href="{{ url_for('game.janken_view')}}">じゃんけん</a>
               <a class="dropdown-item" href="{{ url_for('game.box_view')}}">箱</a>
             </div>
           </li>
@@ -74,7 +74,7 @@
       <ul class="footer_ul">
         <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('game.index_view')}}"><small>index</small></a>
-        <a style="display: block;" class="heading" href="{{ url_for('game.jyanken_view')}}"><small>じゃんけん</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('game.janken_view')}}"><small>じゃんけん</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('game.box_view')}}"><small>箱</small></a>
       </ul>
 
