--- a/application/flask_game/templates_game/index_game.html
+++ b/application/flask_game/templates_game/index_game.html
@@ -5,6 +5,7 @@
 <div class="list-group">
   <a class="list-group-item list-group-item-action" href="{{url_for('game.janken_view')}}">じゃんけん</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('game.box_view')}}">箱</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('game.bike_view')}}">bike</a>
 </div><br><br>
 
 <nav aria-label="Page navigation">
