--- a/application/flask_game/templates_game/layout_game.html
+++ b/application/flask_game/templates_game/layout_game.html
@@ -43,7 +43,7 @@
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('game.index_view')}}">index</a>
               <a class="dropdown-item" href="{{ url_for('game.janken_view')}}">じゃんけん</a>
-              <a class="dropdown-item" href="{{ url_for('game.box_view')}}">箱</a>
+              <a class="dropdown-item" href="{{ url_for('game.bike_view')}}">bike</a>
             </div>
           </li>
         </div>
@@ -76,6 +76,7 @@
         <a style="display: block;" class="heading" href="{{ url_for('game.index_view')}}"><small>index</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('game.janken_view')}}"><small>じゃんけん</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('game.box_view')}}"><small>箱</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('game.bike_view')}}"><small>bike</small></a>
       </ul>
 
       <div class="center">
