--- a/application/flask_game/templates_game/bike.html
+++ b/application/flask_game/templates_game/bike.html
@@ -3,7 +3,10 @@
 {% block BODY %}
 <div id="parent-div">
     <h2><a href="{{url_for('game.bike_view')}}" class="heading">bike</a></h2>
+    <p class="display-none2">お使いの端末ではご利用になれません</p>
     <br id="title">
 </div>
-<script type="text/javascript" src="static_game/js/app.js"></script>
+<script type="text/javascript" src="static_game/js/bike.js"></script>
+<br><br>
+<button class="display-none btn btn-secondary btn-block" onclick="location.href='/game/bike'">再読み込み</button>
 {% endblock %}
