--- a/application/flask_raspberryPi/templates_raspberryPi/index_raspberryPi.html
+++ b/application/flask_raspberryPi/templates_raspberryPi/index_raspberryPi.html
@@ -9,13 +9,13 @@
 
 <nav aria-label="Page navigation">
   <ul class="pagination justify-content-center">
-    <li class="page-item disabraspberryPi">
+    <li class="page-item disable">
       <a class="page-link" href="#">Previous</a>
     </li>
     <li class="page-item">
       <a class="page-link" href="{{url_for('raspberryPi.index_view')}}">1</a>
     </li>
-    <li class="page-item disabraspberryPi">
+    <li class="page-item disable">
       <a class="page-link" href="#">　Next　</a>
     </li>
   </ul>
