--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -35,10 +35,22 @@
       <b><a href='{{url_for("arduino.index_view")}}' class="heading">Flask Arduino</a></b>
     </div>
     <a href='{{url_for("arduino.index_view")}}'>
-      <img src="static_main/images/arduino-icon.png" alt="CPU" width="150" height="100">
+      <img src="static_main/images/arduino-icon.png" alt="Arduino" width="150" height="100">
     </a>
     <div class="card-body text-success">
       <p class="card-text">Flask Arduino is a web site where you can get various values from Arduino.</p>
+    </div>
+  </div>
+
+  <div class="card text-center border-success">
+    <div class="card-header">
+      <b><a href='{{url_for("raspberryPi.index_view")}}' class="heading">Flask RaspberryPi</a></b>
+    </div>
+    <a href='{{url_for("raspberryPi.index_view")}}'>
+      <img src="static_main/images/RaspberryPi.png" alt="CPU" width="150" height="100">
+    </a>
+    <div class="card-body text-success">
+      <p class="card-text">Flask</p>
     </div>
   </div>
 
@@ -50,7 +62,7 @@
       <img src="static_main/images/game.png" alt="Game" width="150" height="100">
     </a>
     <div class="card-body text-success">
-      <h2 class="card-text" style="color:yellow;background-color: black;">Flask Game is in development</h2>
+      <h2 class="card-text"></h2>
     </div>
   </div>
 
