--- a/application/flask_raspi/templates_raspi/index_raspi.html
+++ b/application/flask_raspi/templates_raspi/index_raspi.html
@@ -1,9 +1,9 @@
-{% extends "layout_raspberryPi.html" %}
+{% extends "layout_raspi.html" %}
 
 {% block BODY %}
 <br><br>
 <div class="list-group">
-  <a class="list-group-item list-group-item-action" href="{{url_for('raspberryPi.Blink_view')}}">Blink</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('raspi.Blink_view')}}">Blink</a>
 </div>
 <br><br>
 
@@ -13,7 +13,7 @@
       <a class="page-link" href="#">Previous</a>
     </li>
     <li class="page-item">
-      <a class="page-link" href="{{url_for('raspberryPi.index_view')}}">1</a>
+      <a class="page-link" href="{{url_for('raspi.index_view')}}">1</a>
     </li>
     <li class="page-item disable">
       <a class="page-link" href="#">　Next　</a>
