--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -8,7 +8,7 @@
       <b><a href='{{url_for("Math.index_view")}}' class="heading">Flask Math</a></b>
     </div>
     <a href='{{url_for("Math.index_view")}}'>
-      <img src="static_main/images/tenkey.png" alt="CPU" width="150" height="100">
+      <img src="static_main/images/tenkey.png" alt="Math" width="150" height="100">
     </a>
     <div class="card-body text-success">
       <p class="card-text">Flask Math is a web site that can perform various calculations such as calculus and matrix.
@@ -44,13 +44,13 @@
 
   <div class="card text-center border-success">
     <div class="card-header">
-      <b><a href='{{url_for("raspberryPi.index_view")}}' class="heading">Flask RaspberryPi</a></b>
+      <b><a href='{{url_for("raspi.index_view")}}' class="heading">Flask raspi</a></b>
     </div>
-    <a href='{{url_for("raspberryPi.index_view")}}'>
-      <img src="static_main/images/RaspberryPi.png" alt="CPU" width="150" height="100">
+    <a href='{{url_for("raspi.index_view")}}'>
+      <img src="static_main/images/RaspberryPi.png" alt="raspberryPi" width="150" height="100">
     </a>
     <div class="card-body text-success">
-      <p class="card-text">Flask</p>
+      <p class="card-text">Flask raspberryPi</p>
     </div>
   </div>
 
