--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -16,8 +16,6 @@
     </div>
   </div>
 
-  <br>
-
   <div class="card text-center border-success">
     <div class="card-header">
       <b><a href='{{url_for("cpu.index_view")}}' class="heading">Flask CPU</a></b>
@@ -62,7 +60,7 @@
       <img src="static_main/images/game.png" alt="Game" width="150" height="100">
     </a>
     <div class="card-body text-success">
-      <h2 class="card-text"></h2>
+      <h2 class="card-text" style="color:yellow;background-color: black;">Flask Game is in development</h2>
     </div>
   </div>
 
