--- a/application/flask_raspi/templates_raspi/index_raspi.html
+++ b/application/flask_raspi/templates_raspi/index_raspi.html
@@ -1,9 +1,14 @@
 {% extends "layout_raspi.html" %}
 
 {% block BODY %}
+<!-- 時計の表示 -->
+<p id="RealtimeClock" class="left"></p>
+<script src="static_raspi/js/RealTimeClock.js"></script>
 <br><br>
 <div class="list-group">
   <a class="list-group-item list-group-item-action" href="{{url_for('raspi.Blink_view')}}">Blink</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('raspi.led_view',state='high')}}">HIGH</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('raspi.led_view',state='low')}}">LOW</a>
 </div>
 <br><br>
 
