--- a/application/main/templates_main/404_error.html
+++ b/application/main/templates_main/404_error.html
@@ -13,5 +13,5 @@
 <h2>I'm sorry. The specified URL does not exist.</h2>
 <h2>Moves to the <a href="{{url_for('main.index_view')}}">Top Page</a> after 5 seconds.</h2>
 
-<img src="https://http.cat/404.jpg" alt="404" weight="100%" height="auto">
+<img src="https://http.cat/404.jpg" alt="404" style="width:100%;max-width:100%;height:auto;">
 {% endblock %}
