--- a/application/main/templates_main/layout_main.html
+++ b/application/main/templates_main/layout_main.html
@@ -43,6 +43,7 @@
               <a class="dropdown-item" href="{{ url_for('Math.index_view')}}">Flask math</a>
               <a class="dropdown-item" href="{{ url_for('cpu.index_view')}}">Flask CPU</a>
               <a class="dropdown-item" href="{{ url_for('arduino.index_view')}}">Flask Arduino</a>
+              <a class="dropdown-item" href="{{ url_for('raspi.index_view')}}">Flask Raspi</a>
               <a class="dropdown-item" href="{{ url_for('game.index_view')}}">Flask Game</a>
             </div>
           </li>
@@ -76,6 +77,7 @@
         <a style="display: block;" class="heading" href="{{ url_for('Math.index_view')}}"><small>FlaskMath</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('cpu.index_view')}}"><small>FlaskCPU</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('arduino.index_view')}}"><small>FlaskArduino</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('raspi.index_view')}}"><small>FlaskRaspi</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('game.index_view')}}"><small>FlaskGame</small></a>
       </ul>
 
