--- a/application/flask_CPU/templates_cpu/measure.html
+++ b/application/flask_CPU/templates_cpu/measure.html
@@ -11,10 +11,9 @@
 
 {% block BODY %}
 <div class="center">
-  <h3>{{Data[0]}}</h3>
-  <h3>{{Data[1]}}</h3>
-  <h3>{{Data[2]}}</h3>
-  <h3>{{Data[3]}}　{{Data[4]}}　{{Data[5]}}</h3>
+  {% for data in Data %}
+  <h4>{{data}}</h4>
+  {% endfor %}
 </div>
 
 <div class="form-check form-check-inline">
