--- a/application/flask_arduino/templates_arduino/led_arduino.html
+++ b/application/flask_arduino/templates_arduino/led_arduino.html
@@ -1,7 +1,14 @@
-{% extends "layout_raspi.html" %}
+{% extends "layout_arduino.html" %}
 
 {% block SCRIPT %}
-
+{% if state=="blink" %}
+<script type="text/javascript">
+    function jumpPage() {
+        location.href = "{{url_for('arduino.led_view',state='blink')}}";
+    }
+    setTimeout("jumpPage()", 1000)
+</script>
+{% endif %}
 {% endblock %}
 
 
@@ -9,13 +16,28 @@
 <h2>Hello World!!</h2>
 <h6>{{state}}</h6>
 
+{% if state=="blink" %}
+<button class="display-none btn btn-success" onclick="location.href='/arduino/led?state=blink'">BLINK</button>
+{% else %}
+<button class="display-none btn btn-secondary" onclick="location.href='/arduino/led?state=blink'">BLINK</button>
+{% endif %}
+
+{% if state=="rgb" %}
+<button class="display-none btn btn-success" onclick="location.href='/arduino/led?state=rgb'">RGB</button>
+{% else %}
+<button class="display-none btn btn-secondary" onclick="location.href='/arduino/led?state=rgb'">RGB</button>
+{% endif %}
 
 {% if state=="high" %}
-<button class="display-none btn btn-success" onclick="location.href='/raspi/led?state=high'">HIGH</button>
-<button class="display-none btn btn-secondary" onclick="location.href='/raspi/led?state=low'">LOW</button>
-{% elif state=="low" %}
-<button class="display-none btn btn-secondary" onclick="location.href='/raspi/led?state=high'">HIGH</button>
-<button class="display-none btn btn-success" onclick="location.href='/raspi/led?state=low'">LOW</button>
+<button class="display-none btn btn-success" onclick="location.href='/arduino/led?state=high'">HIGH</button>
+{% else %}
+<button class="display-none btn btn-secondary" onclick="location.href='/arduino/led?state=high'">HIGH</button>
+{% endif %}
+
+{% if state=="low" %}
+<button class="display-none btn btn-success" onclick="location.href='/arduino/led?state=low'">LOW</button>
+{% else %}
+<button class="display-none btn btn-secondary" onclick="location.href='/arduino/led?state=low'">LOW</button>
 {% endif %}
 
 {% endblock %}
