--- a/application/flask_raspi/templates_raspi/led_raspi.html
+++ b/application/flask_raspi/templates_raspi/led_raspi.html
@@ -16,13 +16,22 @@
 <h2>Hello World!!</h2>
 <h6>{{state}}</h6>
 
+{% if state=="blink" %}
+<button class="display-none btn btn-success" onclick="location.href='/raspi/led?state=blink'">BLINK</button>
+{% else %}
+<button class="display-none btn btn-secondary" onclick="location.href='/raspi/led?state=blink'">BLINK</button>
+{% endif %}
 
 {% if state=="high" %}
 <button class="display-none btn btn-success" onclick="location.href='/raspi/led?state=high'">HIGH</button>
-<button class="display-none btn btn-secondary" onclick="location.href='/raspi/led?state=low'">LOW</button>
-{% elif state=="low" %}
+{% else %}
 <button class="display-none btn btn-secondary" onclick="location.href='/raspi/led?state=high'">HIGH</button>
+{% endif %}
+
+{% if state=="low" %}
 <button class="display-none btn btn-success" onclick="location.href='/raspi/led?state=low'">LOW</button>
+{% else %}
+<button class="display-none btn btn-secondary" onclick="location.href='/raspi/led?state=low'">LOW</button>
 {% endif %}
 
 {% endblock %}
