--- a/application/flask_arduino/templates_arduino/layout_arduino.html
+++ b/application/flask_arduino/templates_arduino/layout_arduino.html
@@ -42,8 +42,10 @@
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('arduino.index_view')}}">index</a>
               <a class="dropdown-item" href="{{url_for('arduino.measure_temp_view',graph_type='temp')}}">temp</a>
-              <a class="dropdown-item" href="{{url_for('arduino.blink_view')}}">blink</a>
-              <a class="dropdown-item" href="{{url_for('arduino.RGB_view')}}">RGB</a>
+              <a class="dropdown-item" href="{{url_for('arduino.led_view',state='blink')}}">BLINK</a>
+              <a class="dropdown-item" href="{{url_for('arduino.led_view',state='rgb')}}">RGB</a>
+              <a class="dropdown-item" href="{{url_for('arduino.led_view',state='high')}}">HIGH</a>
+              <a class="dropdown-item" href="{{url_for('arduino.led_view',state='low')}}">LOW</a>
             </div>
           </li>
         </div>
@@ -75,8 +77,10 @@
         <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('arduino.index_view')}}"><small>index</small></a>
         <a style="display: block;" class="heading" href="{{url_for('arduino.measure_temp_view',graph_type='temp')}}"><small>temp</small></a>
-        <a style="display: block;" class="heading" href="{{url_for('arduino.blink_view')}}"><small>blink</small></a>
-        <a style="display: block;" class="heading" href="{{url_for('arduino.RGB_view')}}"><small>RGB</small></a>
+        <a style="display: block;" class="heading" href="{{url_for('arduino.led_view',state='blink')}}"><small>BLINK</small></a>
+        <a style="display: block;" class="heading" href="{{url_for('arduino.led_view',state='rgb')}}"><small>RGB</small></a>
+        <a style="display: block;" class="heading" href="{{url_for('arduino.led_view',state='high')}}"><small>HIGH</small></a>
+        <a style="display: block;" class="heading" href="{{url_for('arduino.led_view',state='low')}}"><small>LOW</small></a>
       </ul>
 
       <div class="center">
