--- a/application/flask_arduino/templates_arduino/measure_temp.html
+++ b/application/flask_arduino/templates_arduino/measure_temp.html
@@ -5,7 +5,7 @@
   function jumpPage() {
     location.href = "{{url_for('arduino.measure_temp_view',graph_type=graph_type)}}";
   }
-  setTimeout("jumpPage()", 2000)
+  setTimeout("jumpPage()", 10000)
 </script>
 {% endblock %}
 
@@ -20,6 +20,7 @@
     #child1 {
       flex-grow: 1;
       padding-top: 8%;
+      padding-left: 8%;
     }
 
     #child2 {
@@ -32,39 +33,39 @@
   <div id="child1">
     <h4>{{time}}</h4>
     <h4>temperature: {{temperature}}℃</h4>
-    <h4>humidity: {{humidity}}%</h4>
+    <h4>humidity: {{humidity}}%</h4><br>
 
-    <div class="form-check form-check-inline">
-      {% if graph_type=="temp" %}
-      <input class="form-check-input" type="radio" id="inlineRadio0" checked="checked">
-      {% else %}
-      <input class="form-check-input" type="radio" id="inlineRadio0">
-      {% endif %}
-      <label class="form-check-label" for="inlineRadio0">
-        <a href="{{url_for('arduino.measure_temp_view',graph_type='temp')}}" class="heading">temperature</a>
-      </label>
-    </div>
+    {% if graph_type=="temp" %}
+    <button class="btn btn-primary" onclick="location.href='/arduino/measure_temp?graph_type=temp'">temperature</button>
+    {% else %}
+    <button class="btn btn-secondary"
+      onclick="location.href='/arduino/measure_temp?graph_type=temp'">temperature</button>
+    {% endif %}
 
-    <div class="form-check form-check-inline">
-      {% if graph_type=="humi" %}
-      <input class="form-check-input" type="radio" id="inlineRadio0" checked="checked">
-      {% else %}
-      <input class="form-check-input" type="radio" id="inlineRadio0">
-      {% endif %}
-      <label class="form-check-label" for="inlineRadio0">
-        <a href="{{url_for('arduino.measure_temp_view',graph_type='humi')}}" class="heading">humidity</a>
-      </label>
-    </div>
+    {% if graph_type=="humi" %}
+    <button class="btn btn-primary" onclick="location.href='/arduino/measure_temp?graph_type=humi'">humidity</button>
+    {% else %}
+    <button class="btn btn-secondary" onclick="location.href='/arduino/measure_temp?graph_type=humi'">humidity</button>
+    {% endif %}
 
-    <div class="form-check form-check-inline">
-      {% if graph_type=="reset" %}
-      <input class="form-check-input" type="radio" id="inlineRadio0" checked="checked">
-      {% else %}
-      <input class="form-check-input" type="radio" id="inlineRadio0">
-      {% endif %}
-      <label class="form-check-label" for="inlineRadio0">
-        <a href="{{url_for('arduino.measure_temp_view',graph_type='reset')}}" class="heading">reset</a>
-      </label>
+    <button class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">reset</button>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Are you sure you want to reset the data?</h5>
+            <button class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <button class="btn btn-secondary" data-dismiss="modal">cansel</button>
+            <button class="btn btn-danger"
+              onclick="location.href='/arduino/measure_temp?graph_type=reset'">reset</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div id="child2">
